test/types/type_variables/deitz/part7/test_generic_error1.good
test_generic_error1.chpl:6: error: unresolved call 'C()'
test_generic_error1.chpl:1: note: candidates are: C(type t, x: t)
